# ManaForge-Engine

./: .CMakeLists.txt.swp  .gitattributes  .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  LICENSE  ManaForge.sln  README.md  README.md~  RPG-Simulator.sln  boost.props  enemyData.java
src/Box2DPhysicsSystem/: Box2DPhysicsSystem.vcxproj  Box2DPhysicsSystem.vcxproj.filters  CMakeLists.txt
src/Box2DPhysicsSystem/Box2D/: Box2D.vcxproj  Box2D.vcxproj.filters
src/Box2DPhysicsSystem/Private/: Box2DActorTransformController.cpp  Box2DActorTransformController.h  Box2DContactListener.cpp  Box2DContactListener.h  Box2DDebugDraw.cpp  Box2DDebugDraw.h  Box2DPhysicsBody.cpp  Box2DPhysicsBody.h  Box2DPhysicsManager.cpp  Box2DPhysicsShape.cpp  Box2DPhysicsShape.h  Box2DPhysicsSystem.cpp  Box2DPhysicsSystem.h  Box2DPhysicsSystemConfig.cpp  Box2DPhysicsSystemConfig.h  Box2DRectangleCollisionBody.cpp  Box2DRectangleCollisionBody.h  CBox2DCollision.h
src/Box2DPhysicsSystem/Public/: Box2DPhysicsManager.h
src/Box2DPhysicsSystem/dependencies/Box2D/: Box2D.vcxproj  Box2D.vcxproj.filters
src/Box2DPhysicsSystem/include/: Box2DPhysicsManager.h  Box2DPhysicsSystemConfig.h  CBox2DCollision.h  CMakeLists.txt
src/Box2DPhysicsSystem/src/: Box2DPhysicsManager.cpp
src/Game/: CMakeLists.txt  Game.vcxproj
src/Game/Debug/: rpg-game.obj.enc
src/Game/Private/: RPG-Game.cpp
src/Game/src/: RPG-Game.cpp
src/ManaForgeEngine/: CMakeLists.txt  CoreManager.cpp  ManaForgeEngine.vcxproj  ManaForgeEngine.vcxproj.filters  Widget.cpp  Widget.h  cmake_install.cmake
src/ManaForgeEngine/Private/: Actor.cpp  AudioComponent.cpp  ChangeDirectory.cpp  Component.cpp  Controller.cpp  ENGException.cpp  EnginePCH.h  Helper.cpp  ImageLoader.cpp  InputManager.cpp  Logging.cpp  MeshComponent.cpp  Module.cpp  ModuleHandler.cpp  ModuleManager.cpp  Pawn.cpp  PhysicsComponent.cpp  PlayerController.cpp  PropertyManager.cpp  Runtime.cpp  SharedLibrary.cpp
src/ManaForgeEngine/Public/: Actor.h  ActorTransformController.h  AudioComponent.h  AudioSystem.h  Cacher.h  CameraComponent.h  ChangeDirectory.h  Clamp.h  Color.h  Component.h  Controller.h  CoreManager.h  ENGException.h  Engine.h  Entity.h  Font.h  Helper.h  ImageLoader.h  InputManager.h  KeyEnum.h  Logging.h  MPLHelp.h  Manager.h  MappedVector.h  Material.h  MaterialInstance.h  MaterialSource.h  MeshActor.h  MeshComponent.h  Model.h  ModelData.h  Module.h  ModuleHandler.h  ModuleManager.h  ParallelQueue.h  Pawn.h  PhysicsBody.h  PhysicsComponent.h  PhysicsShape.h  PhysicsSystem.h  (+30 more)
src/ManaForgeEngine/Public/Manager/: Callbacks.h  Entity.h  EntityHandle.h  MiscMetafunctions.h
src/ManaForgeEngine/include/: Color.h  CoreManager.h  ENGException.h  Engine.h  Engine.h~  Helper.h  Logging.h  MPLHelp.h  Manager.h  MappedVector.h  ModuleHandler.h  PropertyManager.h  Quantity.h  RefCounted.h  Runtime.h  SaveData.h  SerializeGLM.h  TextBoxWidget.h  TimerManager.h  call_from_tuple.h  glm-ortho-2d.h
src/ManaForgeEngine/include/Manager/: Callbacks.h  Entity.h  FindAllManagers.h  GetRefToManager.h  MiscMetafunctions.h
src/ManaForgeEngine/src/: ChangeDirectory.cpp  CoreManager.cpp  ENGException.cpp  EnginePCH.h  Logging.cpp  ModuleHandler.cpp  PropertyManager.cpp  Runtime.cpp
src/OpenALAudioSystem/: CMakeLists.txt  OpenALAudioSystem.vcxproj  OpenALAudioSystem.vcxproj.filters
src/OpenALAudioSystem/OpenAL/: OpenAL.vcxproj
src/OpenALAudioSystem/OpenAL/include/: threads.h
src/OpenALAudioSystem/Private/: OpenALAudioSystem.cpp  OpenALAudioSystem.h  OpenALAudioSystemConfig.cpp  OpenALAudioSystemConfig.h  OpenALSoundCue.cpp  OpenALSoundCue.h  OpenALSoundSource.cpp  OpenALSoundSource.h
src/OpenALAudioSystem/Public/: COpenALSoundSource.h  OpenALAudioSystem.h  OpenALSoundCue.h
src/OpenALAudioSystem/alut/: alut.vcxproj
src/OpenALAudioSystem/dependencies/OpenAL/: CMakeLists.txt  OpenAL.vcxproj  OpenAL.vcxproj.filters
src/OpenALAudioSystem/dependencies/alut/: CMakeLists.txt  alut.vcxproj.filters
src/OpenALAudioSystem/include/: COpenALSoundSource.h  OpenALAudioSystem.h  OpenALSoundCue.h  OpenALSoundSystemConfig.h  OpenALSoundSystemConfig.h~
src/OpenALAudioSystem/src/: OpenALAudioSystem.cpp
src/OpenGLRenderer/: CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.vcxproj  OpenGLRenderer.vcxproj.filters
src/OpenGLRenderer/GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters
src/OpenGLRenderer/Private/: OpenGLCharacterData.h  OpenGLFont.cpp  OpenGLFont.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLMaterialInstance.cpp  OpenGLMaterialInstance.h  OpenGLMaterialSource.cpp  OpenGLMaterialSource.h  OpenGLModel.cpp  OpenGLModel.h  OpenGLModelData.cpp  OpenGLModelData.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRendererConfig.cpp  OpenGLRendererConfig.h  OpenGLRendererManager.cpp  OpenGLRendererPCH.h  OpenGLTextBox.cpp  OpenGLTextBox.h  OpenGLTextBoxWidget.cpp  OpenGLTextBoxWidget.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTextureLibrary.cpp  OpenGLTextureLibrary.h  OpenGLWindow.cpp  OpenGLWindow.h  OpenGLWindowWidget.cpp  OpenGLWindowWidget.h
src/OpenGLRenderer/Public/: COpenGLModel.h  COpenGLWindow.h  OpenGLMaterialInstance.h  OpenGLModelData.h  OpenGLRendererConfig.h  OpenGLRendererManager.h  OpenGLTexture.h
src/OpenGLRenderer/SOIL/: SOIL.c  SOIL.vcxproj  image_helper.c
src/OpenGLRenderer/include/: COpenGLModel.h  OpenGLMaterialInstance.h  OpenGLMaterialSource.h  OpenGLModelData.h  OpenGLRendererConfig.h  OpenGLRendererManager.h  OpenGLTexture.h
src/OpenGLRenderer/src/: OpenGLMaterialInstance.cpp  OpenGLMaterialSource.cpp  OpenGLModelData.cpp  OpenGLRendererManager.cpp  OpenGLRendererPCH.cpp  OpenGLRendererPCH.h  OpenGLRendererPCH.h~
src/TestContent/: CMakeLists.txt  TestContent.vcxproj  TestContent.vcxproj.filters  TestContentSystem.cpp  TestContentSystem.h  pew.cpp  pew.h
src/TestContent/Private/: Gate.cpp  Pew.cpp  TestContent.cpp  TestContentConfig.cpp  pew.cpp
src/TestContent/Public/: Gate.h  Pew.h  TestContentConfig.h  TestContentPawn.h
src/TestContent/include/: TestContentConfig.h  TestContentSystem.h
src/TestContent/src/: TestContentSystem.cpp
(+410 files in other folders)
